--- a/app/src/main/res/layout/test_scroll_view_test.xml
+++ b/app/src/main/res/layout/test_scroll_view_test.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.dansejijie.library.widget.scrollview.CustomNestedScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/test_scroll_view_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,7 +16,7 @@
             android:paddingBottom="100dp"
             android:background="#929292"
             android:orientation="vertical">
-            <com.dansejijie.library.widget.scrollview.CustomNestedScrollView
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
                 android:background="@color/colorPrimary">
@@ -26,17 +26,17 @@
                     android:orientation="vertical">
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="500dp"
+                        android:layout_height="300dp"
                         android:background="#085824"/>
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="500dp"
+                        android:layout_height="300dp"
                         android:background="#538254"/>
                 </LinearLayout>
-            </com.dansejijie.library.widget.scrollview.CustomNestedScrollView>
+            </android.support.v4.widget.NestedScrollView>
 
         </LinearLayout>
 
-    </com.dansejijie.library.widget.scrollview.CustomNestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
